[package]
name = "alejandro-yuste"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.3"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.37.0"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
